[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jt-glogarch"
dynamic = ["version"]
description = "jt-glogarch - Graylog Open Archive, archive & restore logs for Graylog Open"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Jason Cheng", email = "jason@jasontools.com"}]

dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "aiosqlite>=0.20",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "apscheduler>=3.10",
    "structlog>=24.1",
    "python-dateutil>=2.8",
    "pyyaml>=6.0",
    "rich>=13.7",
    "tabulate>=0.9",
    "sse-starlette>=1.8",
    "itsdangerous>=2.1",
    "python-multipart>=0.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.2",
]

[project.scripts]
glogarch = "glogarch.cli.main:cli"

[tool.setuptools.dynamic]
version = {attr = "glogarch.__version__"}

[tool.setuptools.packages.find]
include = ["glogarch*"]

[tool.setuptools.package-data]
glogarch = ["web/templates/*.html", "web/static/**/*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
# -s disables output capture — needed because structlog caches the stderr
# file handle at module import time, and pytest's capsys closes it.
addopts = "-s"
